--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first ever github repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+        <h3>Blog</h3>
+    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, sint labore. Obcaecati aliquid soluta adipisci, veritatis maiores amet consectetur enim quisquam illum, a voluptate assumenda, quidem quas non temporibus blanditiis.
+    </div>
 
 
 </body>
