--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-        <h3>Blog</h3>
+    <h3>Blog</h3>
+    <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, sint labore. Obcaecati aliquid soluta adipisci, veritatis maiores amet consectetur enim quisquam illum, a voluptate assumenda, quidem quas non temporibus blanditiis.
+   </div>
+
+    <h3>second Blog</h3>
     <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, sint labore. Obcaecati aliquid soluta adipisci, veritatis maiores amet consectetur enim quisquam illum, a voluptate assumenda, quidem quas non temporibus blanditiis.
     </div>
+    
+       <h3>/third Blog</h3>
+        <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde, sint labore. Obcaecati aliquid soluta adipisci, veritatis maiores amet consectetur enim quisquam illum, a voluptate assumenda, quidem quas non temporibus blanditiis.
+    </div>
+
+   
 
 
 </body>
